<resources>
    <string name="app_name">Salle_Library</string>
    <string name="nombreApp">Salle Library</string>
    <string name="nombres">Ruben Carreño | Diego Santamarta</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="instruccion">Introduce el título de un libro</string>
    <string name="titulo_del_libro">Título del libro</string>
    <string name="autor">Autor</string>
    <string name="buscar">Buscar</string>
    <string name="descripcion">descripción</string>
    <string name="libros_favoritos">Libros favoritos</string>
</resources>
