<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rubendiego.salle_library.SearchMainActivity">


    <TextView
        android:id="@+id/instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruccion"
        android:textSize="@dimen/instruccion"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin40"
        />

    <EditText
        android:id="@+id/campoBusquedaLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_del_libro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin20"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin40"
        android:layout_marginEnd="@dimen/margin40"
        android:layout_below="@id/instruccion"
        />

    <Button
        android:id="@+id/botonBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textSize="@dimen/textoBotones"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/campoBusquedaLibro"
        android:layout_marginTop="@dimen/margin20"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonBusqueda"
        android:layout_marginTop="@dimen/margin20"
        android:layout_alignParentBottom="true"
        >

    </ListView>

</RelativeLayout>
