<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_del_libro"
        android:textSize="@dimen/sizeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin10"
        />

    <ImageView
        android:id="@+id/imagenLibro"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_below="@id/titulo"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginStart="@dimen/margin20"
        />

    <TextView
        android:id="@+id/autoresTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imagenLibro"
        android:layout_toEndOf="@id/imagenLibro"
        android:layout_marginStart="@dimen/margin40"
        android:text="@string/autor"
        />

    <TextView
        android:id="@+id/autores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/autoresTexto"
        android:layout_below="@id/autoresTexto"
        android:layout_marginTop="@dimen/margin10"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin20"
        android:layout_alignBottom="@id/imagenLibro"
        android:hint="@string/autor"
        />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/autores"
        android:layout_marginTop="@dimen/margin20"
        android:hint="@string/descripcion"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin20"
        />
</RelativeLayout>